--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <span class="dashboard__block__header__icon"></span>
           <img
             class="icon"
-            src="/assets/icons/dollar-circle.svg"
+            src="./assets/icons/dollar-circle.svg"
             alt="dollar-circle"
           >
           <h3 class="dashboard__block__header__title">New Net Income</h3>
@@ -24,7 +24,7 @@
             <img class="icons2" src="./assets/images/avatar-2.png" alt="icons2" >
             <img
               class="icons2"
-              src="/assets/icons/greenCircle.svg"
+              src="./assets/icons/greenCircle.svg"
               alt="greenCircle"
             >
           </section>
@@ -43,7 +43,7 @@
         <section class="dashboard__block__content">
           <span class="dashboard__block__content__value"> £8,245.00 </span>
           <span class="dashboard__block__content__change">
-            <img src="/assets/icons/previous.svg" alt="previous" >
+            <img src="./assets/icons/previous.svg" alt="previous" >
             - 0,5% from last week
           </span>
           <svg
@@ -80,14 +80,14 @@
       <section class="dashboard__block">
         <header class="dashboard__block__header">
           <span class="dashboard__block__header__icon"></span>
-          <img class="icon" src="/assets/icons/cart 02.svg" alt="cart" >
+          <img class="icon" src="./assets/icons/cart 02.svg" alt="cart" >
           <h3 class="dashboard__block__header__title">Total Bookings</h3>
           <section class="dashboard__block__header__avatars">
             <img class="icons2" src="./assets/images/avatar-1.png" alt="icons2" >
             <img class="icons2" src="./assets/images/avatar-2.png" alt="icons2" >
             <img
               class="icons2"
-              src="/assets/icons/greenCircle.svg"
+              src="./assets/icons/greenCircle.svg"
               alt="greenCircle"
             >
           </section>
@@ -106,7 +106,7 @@
         <section class="dashboard__block__content">
           <span class="dashboard__block__content__value"> 256 </span>
           <span class="dashboard__block__content__change">
-            <img src="/assets/icons/previous.svg" alt="previous" >
+            <img src="./assets/icons/previous.svg" alt="previous" >
             + 1.0% from last week
           </span>
           <svg
@@ -142,7 +142,7 @@
       <section class="dashboard__block">
         <header class="dashboard__block__header">
           <span class="dashboard__block__header__icon"></span>
-          <img class="icon" src="/assets/icons/tag 01.svg" alt="tag" >
+          <img class="icon" src="./assets/icons/tag 01.svg" alt="tag" >
           <h3 class="dashboard__block__header__title">Resolve issues</h3>
           <section class="dashboard__block__header__avatars">
             <img
@@ -157,7 +157,7 @@
             >
             <img
               class="icons2"
-              src="/assets/icons/greenCircle.svg"
+              src="./assets/icons/greenCircle.svg"
               alt="greenCircle"
             >
           </section>
@@ -176,7 +176,7 @@
         <section class="dashboard__block__content">
           <span class="dashboard__block__content__value"> 1,256 </span>
           <span class="dashboard__block__content__change">
-            <img src="/assets/icons/previous.svg" alt="previous" >
+            <img src="./assets/icons/previous.svg" alt="previous" >
             + 1.0% from last week
           </span>
           <svg
@@ -218,33 +218,33 @@
         </section>
         <img
           class="smallGreen"
-          src="/assets/icons/smallGreen.svg"
+          src="./assets/icons/smallGreen.svg"
           alt="smallGreen"
         >
         <span class="word">Organic</span>
         <img
           class="grinYellow"
-          src="/assets/icons/grinYellow.svg"
+          src="./assets/icons/grinYellow.svg"
           alt="grinYellow"
         >
         <span class="word2">Professional</span>
         <button type="button" class="button1" src="/assets/icons/calendar.svg">
           Last 7 month
         </button>
-        <img class="up" src="/assets/icons/Up.svg" alt="UP" >
-        <img class="pr" src="/assets/icons/table.svg" alt="table" >
+        <img class="up" src="./assets/icons/Up.svg" alt="UP" >
+        <img class="pr" src="./assets/icons/table.svg" alt="table" >
       </section>
 
       <section class="dashboard__block">
         <span class="text2">Sales Report</span>
         <span class="text3">Month</span>
-        <img class="oval" src="/assets/icons/oval.svg" alt="oval" >
+        <img class="oval" src="./assets/icons/oval.svg" alt="oval" >
         <section class="google">
-          <img src="/assets/icons/google.svg" alt="google" >
+          <img src="./assets/icons/google.svg" alt="google" >
           <span> google </span>
         </section>
         <section class="personal">
-          <img src="/assets/icons/personal.svg" alt="personal">
+          <img src="./assets/icons/personal.svg" alt="personal">
           <span>personal</span>
         </section>
         <span class="other">other</span>
@@ -267,7 +267,7 @@
         </section>
         <section>
           <span class="num2">01</span>
-          <img class="avatar4" src="/assets/icons/avatar4.svg" alt="avatar4" >
+          <img class="avatar4" src="./assets/icons/avatar4.svg" alt="avatar4" >
           <section class="text6">
             <h3>Shirt Creme</h3>
             <h3>March 24,2022</h3>
@@ -276,7 +276,7 @@
           <section class="text7">
             <span>#A4064B</span>
             <span>09.20 AM</span>
-            <img src="/assets/icons/greenOvall.svg" alt="" >
+            <img src="./assets/icons/greenOvall.svg" alt="" >
             <span>£130</span>
             <span>Branding</span>
           </section>
@@ -284,7 +284,7 @@
 
         <section>
           <span class="num2">02</span>
-          <img class="avatar4" src="/assets/icons/avatar5.svg" alt="avatar5" >
+          <img class="avatar4" src="./assets/icons/avatar5.svg" alt="avatar5" >
           <section class="text6">
             <h3>Shirt Creme</h3>
             <h3>March 24,2022</h3>
@@ -293,13 +293,13 @@
           <section class="text7">
             <span>#A4064B</span>
             <span>09.20 AM</span>
-            <img src="/assets/icons/YellowLight.svg" alt="" >
+            <img src="./assets/icons/YellowLight.svg" alt="" >
             <span>£130</span>
             <span>Branding</span>
           </section>
           <section>
             <span class="num3">03</span>
-            <img class="wooman" src="/assets/icons/wooman.svg" alt="" >
+            <img class="wooman" src="./assets/icons/wooman.svg" alt="" >
             <section class="text6">
               <h3>Shirt Creme</h3>
               <h3>March 24,2022</h3>
@@ -317,10 +317,10 @@
       <section class="dashboard__block">
         <h2 class="text4">Weekly Transaction</h2>
         <h2 class="text4">Summary</h2>
-        <button type="button" class="button3" src="/assets/icons/calendar.svg">
+        <button type="button" class="button3" src="./assets/icons/calendar.svg">
           Last 7 month
         </button>
-        <img class="stats" src="/assets/icons/stats.svg" alt="stats" >
+        <img class="stats" src="./assets/icons/stats.svg" alt="stats" >
         <section class="days">
           <span>24 Jan</span>
           <span>25 Jan</span>
