--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           alt="grinYellow"
         >
         <span class="word2">Professional</span>
-        <button type="button" class="button1" src="/assets/icons/calendar.svg">
+        <button type="button" class="button1" src="./assets/icons/calendar.svg">
           Last 7 month
         </button>
         <img class="up" src="./assets/icons/Up.svg" alt="UP" >
